# xmonad-desktop

./: LICENSE  README  xmonad-desktop.cabal  xmonad-desktop.hs
session/: gnome-xmonad-desktop-session  xmonad-desktop.desktop  xmonad-desktop.session  xmonad-gnome-session.desktop
