name:               xmonad-desktop
version:            0.1
synopsis:           xmonad configured for GNOME, KDE, and XFCE
description:
    A simple wrapper to run xmonad configured for a GNOME, KDE, or XFCE desktop.
category:           System
license:            BSD3
license-file:       LICENSE
author:             Jens Petersen
maintainer:         juhp@community.haskell.org

extra-source-files: README
		    session/gnome-xmonad-desktop-session
		    session/xmonad-gnome-session.desktop
		    session/xmonad-desktop.desktop
		    session/xmonad-desktop.session
cabal-version:      >= 1.6
build-type:         Simple
tested-with:        GHC == 6.12.3, GHC == 7.0.1

source-repository head
  type:     git
  location: http://github.com/juhp/xmonad-desktop

executable xmonad-desktop
    main-is:            xmonad-desktop.hs
    build-depends:  	base >= 4, xmonad, xmonad-contrib
